@@ -308,3 +308,4 @@ Version History
     - Fixed U3 and U6 WaitShort and WaitLong documentation.
     - Fixed the U12 aiBurst method so that the returned voltages list is
       correct.
+    - Added device access/claim error detection to Exodriver open.
